# letero

./: .gitignore  Dockerfile  README.md
migrations/: 20250902082759_init.down.sql  20250902082759_init.up.sql  20250906102716_session_uid.down.sql  20250906102716_session_uid.up.sql  20250906191341_createdat_not_null.down.sql  20250906191341_createdat_not_null.up.sql  20250907142652_expire_session.down.sql  20250907142652_expire_session.up.sql  20250907142837_remove_logged_at.down.sql  20250907142837_remove_logged_at.up.sql  20250913085124_salt.down.sql  20250913085124_salt.up.sql  20250927083756_pg_trgm.down.sql  20250927083756_pg_trgm.up.sql  20251102145120_init.sql  20251103231539_salt.sql
server/: Cargo.toml  Dockerfile  docker-compose.yml
server/.sqlx/: query-18319b18a16a045710c636e7f0e2ff157235c8729d736ab5299d6b77899e79d6.json  query-2305ac414035563a8f56c2aa431a97eb2c9940349dd22aaa07af53295e079ddb.json  query-2e3195f3983eb5d5691f035693e9467ec58aea0ec0e89cc97d7d2818b60f89c2.json  query-3ae5e7a4b7cfee4e2135699d0d0d390ca48a472a524dadf336d60b31c00ccfa6.json  query-5fdee3efda94e301c05755af1121af64a794c67c214b4c75dded7182f664020f.json  query-67a1af68a66e3e102ec81c4ab5ecb73f137cf457a8f3d5c31289242ac7fc448a.json  query-7886c483ee8ee4cbcd927ad54d069bba853674c6843fe0334d9d4870c8b0d366.json  query-7ab50e51ce658e9947ac89b09d5bfc98407d4777dafb3f431ec0975610d46368.json  query-86e94864e84295eafdcd13b6b96eed0d32db848fd7d69ae0314f8c78c20f7f7b.json  query-8a3e8891f55a0122c8c0175bf9bcf0bc47b1fd9d62eaa4ecdf96dfc60820cd27.json  query-9de22fe50949d3d01d96c6619e325aceec5f56ac12e9638b292fe2fdfd78ed33.json  query-9e172a021f74773bbba35eec4ef38c0defbf010178b203943bd143a15fdee6bc.json  query-b7cfbccf85572086db06dffba21f1823afa86660513db27075fbff4e716b47c7.json  query-bf4be1343e01bb02a2e19d700a9f2f20839e361aa331d469e1213231e870c020.json  query-c8ae7c23caf4b39552edae7f859bbc09d2cf759089d9c2ed1bcfdcb8b19eeabe.json  query-d3a13c00ccf16f0fdc9d9b3943bc293962b4efc2d7f0d9945286128a7dbb601e.json  query-e07ba6449d6ca044556b93d59268e701613fb7fe606e16b0e8c99b28cd11621d.json  query-e6509275e3a52d9f2c26f872ca2959de87be370f3421d0405b566f2fe617c889.json  query-e74a860ac6692c3e56b1045a4b0f4b7f8d583444ca7b26e0eccff1626586d670.json
server/src/: db.rs  docs.rs  error.rs  lib.rs  logs.rs  main.rs  rand.rs  state.rs
server/src/controllers/: chats.rs  events.rs  messages.rs  mod.rs  search.rs  users.rs
server/src/models/: chats.rs  events.rs  messages.rs  mod.rs  search.rs  users.rs
server/src/repositories/: chats.rs  messages.rs  mod.rs  sessions.rs  users.rs
server/src/services/: auth.rs  mod.rs  session.rs  trace.rs
web/: index.html  package.json  styles.css
web/src/: App.tsx  (+1 more)
(+19 files in other folders)
