[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres"] }
time = { version = "0.3.44", features = ["formatting", "macros", "serde"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "local-time"] }
serde = { version = "1.0.219", features = ["rc"] }
