[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["http2"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "time"] }
time = { version = "0.3.44", features = ["formatting", "macros", "serde"] }
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "local-time"] }
serde = { version = "1.0.219", features = ["rc"] }
sha2 = "0.10.9"
hex = "0.4.3"
small_uid = "0.2.4"
tower-http = { version = "0.6.6", features = ["fs"] }
utoipa = { version = "5.4.0", features = ["rc_schema", "time"] }
utoipa-axum = "0.2.0"
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
async-trait = "0.1.89"
rand = { version = "0.9.2", default-features = false, features = ["small_rng"] }
cookie = "0.18.1"
futures-util = { version = "0.3.31", default-features = false }
tokio-stream = { version = "0.1.17", features = ["sync"] }
strum = { version = "0.27.2", features = ["derive"] }
serde_json = "1.0.145"
dashmap = "6.1.0"

[dev-dependencies]
mockall = "0.13.1"
tower = "0.5.2"
